--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,7 @@
+<!-- % include modals.html % -->
+<!-- % include portfolio_grid.html % -->
+<!-- % include about.html % -->
+
 <!DOCTYPE html>
 <html>
 
@@ -8,13 +12,11 @@
 
     {% include header.html %}
     {% include services.html %}
-    {% include portfolio_grid.html %}
-    {% include about.html %}
     {% include team.html %}
     {% include clients.html %}
     {% include contact.html %}
     {% include footer.html %}
-    {% include modals.html %}
+
     {% include js.html %}
 
     </body>
