--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!-- % include modals.html % -->
 <!-- % include portfolio_grid.html % -->
 <!-- % include about.html % -->
+<!-- % include clients.html % -->
 
 <!DOCTYPE html>
 <html>
@@ -13,7 +14,7 @@
     {% include header.html %}
     {% include services.html %}
     {% include team.html %}
-    {% include clients.html %}
+    
     {% include contact.html %}
     {% include footer.html %}
 
